# CWM

./: .cwminclude  .gitignore  README.md  This is a classic microservices pai.txt  pyproject.toml  requirements.txt
cwm/: backup_cmd.py  cli.py  get_cmd.py  save_cmd.py  storage_manager.py  utils.py  watch_cmd.py
src/cwm/: ask_cmd.py  backup_cmd.py  bank_cmd.py  clear_cmd.py  cli.py  config_cmd.py  copy_cmd.py  file_mapper.py  get_cmd.py  git_cmd.py  git_utils.py  group_cmd.py  gui_app.py  import time.py  jump_cmd.py  project_cmd.py  project_utils.py  rich_help.py  run_cmd.py  save_cmd.py  schema_validator.py  service_manager.py  setup_cmd.py  shell_hook.py  storage_manager.py  tui_app.py  utils.py  watch_cmd.py
src/cwm/gui/: tk_app.py
src/cwm_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: tese.py  test.py
